# PulseCirc

./: .gitignore  README.md  circ2elem.py  circulation_model.py  circulation_solver.py  heart_model_pulse.py  main.py  pulse_circ.py  pyproject.toml  solver.py  test.py
examples/: lv_ellipsoid.py
examples/pulse-example/: heart_model_pulse.py  main.py  solver.py
examples/thin-sphere/: heart_model_thin_sphere.py  main.py  test.py
lv/: cfun.h5  cfun.xdmf  ffun.h5  ffun.xdmf  info.json  line_mesh.h5  line_mesh.xdmf  markers.json  mesh.h5  mesh.xdmf  microstructure.h5  triangle_mesh.h5  triangle_mesh.xdmf  vertex_mesh.h5  vertex_mesh.xdmf
results/: results.xdmf
src/circ/: __init__.py  circ.py  circulation_model.py  datacollector.py  solver.py  wk3.py
